k3s_cluster/base/dmz/media/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-media-readarr
spec:
  type: ClusterIP
  selector:
    app: dmz-media-readarr
  ports:
    - name: web
      protocol: TCP
      port: 6657
      targetPort: 8787
